--- a/config.yml
+++ b/config.yml
@@ -231,11 +231,11 @@ challenge:                                # Incoming challenges.
     - rapid
     - classical
   bot_modes:                              # Game modes to accept against BOTs.
-    - casual                              # Unrated games.
-    - rated                               # Rated games
+#    - casual                              # Unrated games.
+#    - rated                               # Rated games
   human_modes:                            # Game modes to accept against humans.
-    - casual                              # Unrated games.
-    - rated                               # Rated games
+#    - casual                              # Unrated games.
+#    - rated                               # Rated games
 matchmaking:
   delay: 400                               # Time in seconds the bot must be idle before a new challenge is started.
   timeout: 30                             # Time until a challenge is canceled.
